_sass/klise/_layout.scss
// Navbar
.navbar {
  // height: 35px;
  // max-width: calc(#{$wide-size} - (#{$spacing-full} * 2));
  max-width: calc(720px - (30px * 2));
  max-width: -webkit-calc(#{$wide-size} - (#{$spacing-full} * 2));
  position: relative;
  margin-right: auto;
  margin-left: auto;
  // border-bottom: 1px solid $light;
  padding: 15px 10px;
  @extend %clearfix;
}

.pagination-count {
  opacity: 0.3;
}

// Navigation
.menu {
  user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  height: 35px;

  a#mode {
    float: right;
    // left: 8px;
    // top: 6px;
    position: relative;
    // margin-right: 25px;
    padding: 0 10px;
    clear: both;
    -webkit-transform: scale(1, 1);
    transform: scale(1, 1);
    opacity: 0.7;
    z-index: 9;
    &:hover {
      cursor: pointer;
      opacity: 1;
    }
    &:active {
      -webkit-transform: scale(0.9, 0.9);
      transform: scale(0.9, 0.9);
    }
    .mode-moon {
      display: block;
      line {
        stroke: $black;
        fill: none;
      }

      circle {
        fill: $black;
        stroke: $black;
      }
    }
    .mode-sunny {
      display: none;
      line {
        stroke: $dark-white;
        fill: none;
      }
      circle {
        fill: none;
        stroke: $dark-white;
      }
    }
  }

  .trigger {
    float: right;
    z-index: 9;
  }

  .menu-trigger {
    display: none;
  }

  .menu-icon {
    display: none;
  }

  .menu-link {
    color: $black;
    line-height: $base-line-height + 0.4;
    text-decoration: none;
    padding: 5px 8px;
    opacity: 0.7;
    letter-spacing: 0.3px;

    &:hover {
      opacity: 1;
    }

    &:not(:last-child) {
      margin-right: 5px;
    }

    &.rss {
      position: relative;
      bottom: -3px;
      outline: none;
    }

    @include media-query($on-mobile) {
      opacity: 0.8;
    }

    &:active, &:focus {
      outline: 0;
      text-decoration: none;
      border: none;
      -moz-outline-style: none;
    }
  }

  .menu-link.active {
    opacity: 1;
    font-weight: 600;
  }

  @include media-query($on-mobile) {
    // position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 2;
    text-align: center;
    // height: 50px;
    background-color: $white;
    // border-bottom: 1px solid $light;

    // a#mode {
    //   left: 10px;
    //   top: 12px;
    // }

    .menu-icon {
      display: block;
      position: absolute;
      right: 0;
      width: 50px;
      height: 23px;
      line-height: 0;
      padding-top: 13px;
      padding-bottom: 15px;
      cursor: pointer;
      text-align: center;
      z-index: 1;
      > svg {
        fill: $black;
        opacity: 0.7;
      }
      &:hover {
        > svg {
          opacity: 1;
        }
      }
      &:active {
        -webkit-transform: scale(0.9, 0.9);
        transform: scale(0.9, 0.9);
      }
    }

    input[type="checkbox"]:not(:checked) ~ .trigger {
      clear: both;
      // visibility: hidden;
      .trigger-container {
        display: flex;
        .menu-link {
          padding: 0 10px;
        }
      }
    }

    input[type="checkbox"]:checked ~ .trigger {
      // position: fixed;
      animation: 0.2s ease-in forwards fadein;
      -webkit-animation: 0.2s ease-in forwards fadein;
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
      background-color: $white;
      height: 100vh;
      width: 100%;
      top: 0;
    }

    .menu-link {
      display: block;
      box-sizing: border-box;
      font-size: 1.1em;

      &:not(:last-child) {
        margin: 0;
        padding: 2px 0;
      }
    }
  }
}

// Author
.author {
  margin-top: 3rem;
  margin-bottom: 7.2rem;
  text-align: center;

  @include media-query($on-mobile) {
    margin-top: 2rem;
    margin-bottom: 3em;
  }

  .author-avatar {
    width: 60px;
    height: 60px;
    border-radius: 100%;
    user-select: none;
    background-color: $black;
    -ms-user-select: none;
    -webkit-user-select: none;
    // -webkit-animation: 0.5s ease-in forwards fadein;
    // animation: 0.5s ease-in forwards fadein;
    // opacity: 1;
  }

  .author-name {
    font-size: 18px;
    margin-bottom: 20px;
    margin-top: 10px;
    font-weight: 300;
    letter-spacing: 5px;
  }

  .author-bio {
    margin: 0 auto;
    opacity: 0.9;
    max-width: 500px;
    line-height: 1.688;
  }

  .blog-bio {
    margin: 0 auto;
    margin-top: 15px;
    opacity: 0.9;
    max-width: 500px;
    line-height: 1.688;
  }

  .socials {
    display: flex;
    justify-content: center;

    a:active, a:focus {
      outline: 0;
      border: none;
      -moz-outline-style: none;
    }

    .twitter-mode-sunny, .linkedin-mode-sunny, .github-mode-sunny {
      display: block;
      margin: 10px;
    }
    .twitter-mode-moon, .linkedin-mode-moon, .github-mode-moon {
      display: none;
      margin: 10px;
    }
  }
}


.home-arrow {
  height: 35px;
  // padding: 0px 0px;
  font-size: 30px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  padding: 15px 0 15px 0;
  margin-top: -65px;
  @include media-query($on-mobile) {
    // margin-top: -65px;
  }
  a {
    text-decoration: none;
    height: 35px;
    display: flex;
    align-items: center;
  }
  a:active, a:focus {
    outline: 0;
    text-decoration: none;
    border: none;
    -moz-outline-style: none;
  }
}

.home-arrow-a-tags {
  color: #4a4d56 !important;
  &:hover {
    color: $text-link-blue-active !important;
  }
}

// Content
.posts-item-note {
  font-size: $base-font-size;
  font-weight: 700;
  margin-bottom: 5px;
  color: $black;
}

// List of posts
.post-item {
  display: flex;
  flex-direction: column;
  padding-top: 10px;
  padding-bottom: 20px;
  @extend %clearfix;

  &:not(:last-child) {
    border-bottom: 1px solid $light;
  }

  .post-item-date {
    min-width: 96px;
    color: $black;
    font-weight: 300;
    padding-right: 5px;
    font-size: 14px;
    opacity: 0.6;

    // @include media-query($on-mobile) {
    //   font-size: 16px;
    // }
  }

  .post-item-title {
    margin: 0;
    border: 0;
    padding: 0;
    // font-size: $base-font-size;
    font-size: 24px;
    font-weight: 600;
    letter-spacing: 0.1px;

    @include media-query($on-mobile) {
      font-size: 22px;
    }

    a {
      color: $text-base-color;

      &:hover,
      &focus {
        color: $black;
      }
    }
  }
}

.post-description {
  // font-family: "Merriweather", serif;
  // letter-spacing: 0.01rem;
  // font-size: 1em;
}

// Footer
.footer {
  margin-top: 8em;
  margin-bottom: 2em;
  text-align: center;

  @include media-query($on-mobile) {
    margin-top: 3em;
  }
  span.footer_item {
    color: $black;
    opacity: 0.8;
    font-weight: $bold-weight;
    font-size: $small-font-size;
  }
  a.footer_item {
    color: $black;
    opacity: 0.8;
    text-decoration: none;

    &:not(:last-child) {
      margin-right: 10px;
      &:hover {
        opacity: 1;
      }
    }
  }

  .footer_copyright {
    font-size: $small-font-size - 1;
    margin-top: 3px;
    display: block;
    color: $gray;
    opacity: 0.8;
  }
}

.not-found {
  text-align: center;
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 75vh;
  .title {
    font-size: 5em;
    font-weight: $bold-weight;
    line-height: 1.1;
    color: $black;
    text-shadow: 1px 0px 0px $text-link-blue;
  }
  .phrase {
    color: $text-base-color;
  }
  .solution {
    color: $text-link-blue;
    letter-spacing: 0.5px;
  }
  .solution:hover {
    color: $text-link-blue-active;
  }
}


.search-article {
  position: relative;
  margin-bottom: 50px;

  label[for="search-input"] {
    position: relative;
    top: 10px;
    left: 11px;
  }

  input[type="search"] {
    top: 0;
    left: 0;
    border: 0;
    width: 100%;
    height: 40px;
    outline: none;
    position: absolute;
    border-radius: 5px;
    padding: 10px 10px 10px 35px;
    color: $text-base-color;
    -webkit-appearance: none;
    font-size: $base-font-size;
    background-color: rgba(128, 128, 128, 0.1);
    border: 1px solid rgba(128, 128, 128, 0.1);
    &::-webkit-input-placeholder {
      color: #808080;
    }
    &::-webkit-search-decoration,
    &::-webkit-search-results-decoration {
      display: none;
    }
  }

  & #search-results {
    display: none;
    position: absolute;
    top: 80px;
    width: calc(100% - 70px);
    max-height: 325px;
    overflow-y: auto;
    background-color: white;
    box-shadow: 0px 4px 8px 0 #ccc;
    z-index: 99999;
    & .result-item {
      display: block;
      padding: 8px 16px;
      text-decoration: none;
      & .title,
      .description {
        width: 100%;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
      & .title {
        color: #f74094;
        padding-bottom: 4px;
        font-size: 16px;
      }
      & .description {
        color: #757575;
        font-size: 16px;
      }
    }
  }
}

.pagination {
  margin-top: 20px;
  display: flex;
  // display: inline-block;
  justify-content: space-around;

  a {
    text-decoration: none;
  }

  a:active, a:focus {
    outline: 0;
    border: none;
    -moz-outline-style: none;
  }

  .pagination-newer, .pagination-older, .pagination-count {
    width: 33%;
    text-align: center;
  }
}

#search-results {
  // text-align: center;
  div {
    text-align: left;
  }
}

.archive-tags {
  height: auto;
  .tag-item {
    padding: 1px 3px;
    border-radius: 2px;
    border: 1px solid rgba(128, 128, 128, 0.1);
    background-color: rgba(128, 128, 128, 0.1);
  }
}

.tags-page-title {
  width: 100%;
  text-align: center;
  font-size: 2em;
  line-height: 1.2;
  margin-bottom: 25px;
}

